Init shelf browser item status and re-enable test.

Call UpdateBrowserItemState on BrowserShortcutLauncherItemController creation.
(this initializes the status of the shelf's browser item on creation)
Enable the previously flaky test (relied on DidFinishNavigation notice)

BUG=693341
TEST=Automated test passes reliably
R=sky@chromium.org

Review-Url: https://codereview.chromium.org/2766913002
Cr-Commit-Position: refs/heads/master@{#458604}

Former-commit-id: e350b397d2bbe19303903e925de460865541063f